# NextMe

./: .env.example  .gitignore  README.md  README.zh.md  launchd-install.sh  pyproject.toml  reload.sh  settings.json.example  start.sh  stop.sh  systemd-install.sh  windows-service-install.ps1
doc/: 2026-02-28-memory-update-design.zh.md  design.md  design.zh.md  memory-and-persistence-design.zh.md  multi-project-isolation.zh.md  persistence.zh.md
doc/plans/: 2026-02-28-memory-update.md
docs/plans/: 2026-03-01-acl-design.md  (+3 more)
scripts/: feishu_book_meeting.py
skills/: commit.md  debug.md  explain.md  review.md  test.md
src/nextme/: __init__.py  (+2 more)
tests/: conftest.py  test_acl_card_actions.py  test_acl_cards.py  test_acl_commands.py  test_acl_db.py  test_acl_manager.py  test_acl_schema.py  test_acp_client.py  test_acp_janitor.py  test_acp_protocol.py  test_acp_runtime.py  test_book_meeting_script.py  test_config_loader.py  test_config_schema.py  test_config_state_store.py  test_context_compression.py  test_context_manager.py  test_core_commands.py  test_core_dispatcher.py  test_core_path_lock.py  test_core_session.py  test_core_worker.py  test_direct_runtime.py  test_dispatcher_acl.py  test_dispatcher_acl_card_actions.py  test_dispatcher_commands.py  test_dispatcher_hook.py  test_dispatcher_schedule.py  test_e2e.py  test_feishu_client.py  test_feishu_dedup.py  test_feishu_handler.py  test_feishu_reply.py  test_integration_multi_project.py  test_integration_permission.py  test_interfaces.py  test_main.py  test_memory.py  test_memory_manager.py  test_memory_schema.py  (+12 more)
(+47 files in other folders)
