[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextme"
version = "0.1.0"
description = "Feishu IM × Claude Code Agent Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark-oapi>=1.5.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
brotli = ["brotli>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
nextme = "nextme.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nextme"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Coverage policy:
#   - Total coverage must stay ≥ 85% (enforced by --cov-fail-under).
#   - New/modified code added in each PR must achieve ≥ 90% coverage
#     (verified manually or via `uv run diff-cover coverage.xml --compare-branch=main`).
addopts = "--cov=nextme --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["nextme"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
